# anodize

./: .anodize.yaml  .anodizer.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  action.yml  anodize.spec  anodizer.spec  cosign.pub
.cargo/: config.toml
.claude/: PLAN.md  known-bugs.md  settings.json
.claude/archive/: known-bugs-2026-04.md
.claude/audits/2026-04-config-gaps/: INDEX.md  _categorization.md  _root-cause-chocolatey.md  _root-cause-krew.md  _session-b-inputs.md  _session-c-inputs.md  build-archive-source.md  docker-nfpm-installers.md  infra-announcers_pass-a.md  infra-announcers_pass-b.md  publishers-pkgmgr.md  release-integrity_pass-a.md  release-integrity_pass-b.md
.claude/audits/2026-04-v0.x/: README.md  wave-status.md
.claude/hooks/: guard-bugs-closure.sh  post-edit.sh
.claude/plans/: 2026-03-27-docsite-phase-b.md  2026-03-27-docsite.md  2026-03-27-session5-extended-features.md  2026-03-29-goreleaser-parity-closures.md  2026-03-30-parity-audit-continuation.md  2026-03-30-schema-driven-docs.md  2026-03-30-session-b-announce-providers.md  2026-04-15-parity-audit-continuation.md  2026-04-18-bump-command.md  2026-05-03-file-decomposition.md  decomposition-handoff-prompt.md  global-roadmap.md
.claude/prompts/: consolidate-parity-files.md  parity-session-a.md
.claude/rules/: anti-patterns.md  module-boundaries.md
.claude/scripts/: parity-loop-preflight.sh
.claude/specs/: 2026-03-25-anodize-design.md  2026-03-27-docsite-design.md  2026-03-29-cloud-storage-split-merge-v2.md  community-adoption-feature-gaps.md  goreleaser-action-feature-inventory.md  goreleaser-complete-feature-inventory.md  parity-gap-analysis.md  parity-session-index.md  test-coverage-comparison.md  test-parity-gap-matrix.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: determinism_harness.rs  lib.rs  main.rs  pipeline.rs  timeout.rs
crates/cli/tests/: bump_integration.rs  check_determinism.rs  integration.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: artifact.rs  cargo_lock.rs  config.rs  content_source.rs  context.rs  defaults_merge.rs  determinism.rs  determinism_runner.rs  docker_detect.rs  extrafiles.rs  git.rs  github_client.rs  harness_signing.rs  hashing.rs  hooks.rs  http.rs  lib.rs  log.rs  partial.rs  preflight.rs  publisher.rs  redact.rs  retry.rs  scm.rs  signing.rs  target.rs  template.rs  template_preprocess.rs  templated_files.rs  test_helpers.rs  tool_detect.rs  url.rs  user_command.rs  util.rs
crates/core/tests/: config_parsing_tests.rs
crates/stage-announce/: CHANGELOG.md  Cargo.toml
crates/stage-announce/src/: bluesky.rs  discord.rs  discourse.rs  dispatch.rs  email.rs  helpers.rs  http.rs  lib.rs  linkedin.rs  mastodon.rs  mattermost.rs  opencollective.rs  reddit.rs  run.rs  slack.rs  teams.rs  telegram.rs  tests.rs  twitter.rs  util.rs  webhook.rs
crates/stage-appbundle/: CHANGELOG.md  Cargo.toml
crates/stage-appbundle/src/: lib.rs
crates/stage-archive/: CHANGELOG.md  Cargo.toml
crates/stage-archive/src/: file_specs.rs  formats.rs  lib.rs  run.rs  tests.rs
crates/stage-blob/: CHANGELOG.md  Cargo.toml
crates/stage-blob/src/: kms.rs  lib.rs  provider.rs  publisher.rs  run.rs  store.rs  tests.rs  (+1 more)
crates/stage-build/: CHANGELOG.md  Cargo.toml
crates/stage-changelog/: CHANGELOG.md  Cargo.toml
crates/stage-changelog/src/: github_native.rs  lib.rs  render.rs  run.rs  tests.rs
crates/stage-changelog/src/fetch/: gitea.rs  gitlab.rs
crates/stage-checksum/: CHANGELOG.md  Cargo.toml
crates/stage-checksum/src/: lib.rs  tests.rs
crates/stage-dmg/: CHANGELOG.md  Cargo.toml
crates/stage-dmg/src/: lib.rs
crates/stage-docker/: CHANGELOG.md  Cargo.toml
crates/stage-flatpak/: CHANGELOG.md  Cargo.toml
crates/stage-flatpak/src/: lib.rs
crates/stage-makeself/: CHANGELOG.md  Cargo.toml
crates/stage-msi/: CHANGELOG.md  Cargo.toml
crates/stage-msi/src/: lib.rs
crates/stage-nfpm/: CHANGELOG.md  Cargo.toml
crates/stage-notarize/: CHANGELOG.md  Cargo.toml
crates/stage-nsis/: CHANGELOG.md  Cargo.toml
crates/stage-pkg/: CHANGELOG.md  Cargo.toml
crates/stage-pkg/src/: lib.rs
crates/stage-publish/: CHANGELOG.md  Cargo.toml
crates/stage-publish/src/: artifactory.rs  aur.rs  aur_source.rs  cargo.rs  chocolatey.rs  cloudsmith.rs  crates_io.rs  dockerhub.rs  fury.rs  homebrew.rs  krew.rs  lib.rs  nix.rs  npm.rs  preflight.rs  publisher_helpers.rs  registry.rs  rollback.rs  rollback_only.rs  run_summary.rs  scoop.rs  testing.rs  upload.rs  util.rs  winget.rs
crates/stage-publish/src/chocolatey/: mod.rs  package.rs  publish.rs  publisher.rs  tests.rs
crates/stage-publish/src/homebrew/: cask.rs  formula.rs  mod.rs  publish_formula.rs  publish_top.rs  tests.rs
crates/stage-publish/src/mcp/: auth.rs  mod.rs  publisher.rs
crates/stage-publish/src/nix/: binary.rs  generate.rs  mod.rs  publish.rs  tests.rs
crates/stage-publish/src/post_publish/: chocolatey.rs  mod.rs  status.rs  tests.rs  winget.rs
crates/stage-publish/src/util/: github_pr.rs  mod.rs  tests.rs
crates/stage-publish/tests/: run_report_persistence.rs  sibling_isolation.rs
crates/stage-release/: CHANGELOG.md  Cargo.toml
crates/stage-release/src/: gitea.rs  gitlab.rs  lib.rs  publisher.rs  release_body.rs  run.rs  tests.rs
crates/stage-release/src/github/: mod.rs  rate_limit.rs  retry_call.rs
crates/stage-sbom/: CHANGELOG.md  Cargo.toml
crates/stage-sbom/src/: lib.rs
crates/stage-sign/: CHANGELOG.md  Cargo.toml
crates/stage-snapcraft/: CHANGELOG.md  Cargo.toml
crates/stage-source/: CHANGELOG.md  Cargo.toml
crates/stage-srpm/: CHANGELOG.md  Cargo.toml
crates/stage-srpm/src/: lib.rs
crates/stage-templatefiles/: CHANGELOG.md  Cargo.toml
crates/stage-templatefiles/src/: lib.rs
crates/stage-upx/: CHANGELOG.md  Cargo.toml
crates/xtask/: Cargo.toml
docs/: configuration.md  migration-from-goreleaser.md  templates.md
docs/site/: config.toml
scripts/: install.sh.tpl  makeself-install.sh
(+201 files in other folders)
