[package]
name = "anodizer-stage-changelog"
description = "Changelog stage for the anodizer release tool — generates changelogs from git history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
