[package]
name = "anodize-stage-checksum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
