[package]
name = "anodize-stage-checksum"
description = "Checksum stage for the anodize release tool — generates SHA, SHA-3, BLAKE2, BLAKE3, CRC32, and MD5 checksums"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
blake2.workspace = true
blake3.workspace = true
crc32fast.workspace = true
md-5.workspace = true
glob.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
serde_yaml_ng.workspace = true
