[package]
name = "anodize-stage-flatpak"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Flatpak Linux bundle stage for anodize release automation"

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
