[package]
name = "anodize-stage-msi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Windows MSI installer stage for anodize release automation"

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
tempfile.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
serde_yaml_ng.workspace = true
