[package]
name = "anodize-stage-publish"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tempfile.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
