[package]
name = "anodize-stage-release"
description = "Release stage for the anodize release tool — creates GitHub releases and uploads artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
glob.workspace = true
http = "1"
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["client-legacy"] }
octocrab.workspace = true
reqwest.workspace = true
rustls = { version = "0.23", features = ["ring"] }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
tempfile = "3"
