[package]
name = "anodize-stage-srpm"
description = "Source RPM (SRPM) package stage for the anodize release tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
glob.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
