[package]
name = "anodize-stage-templatefiles"
description = "Template file rendering stage for the anodize release tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
serde_yaml_ng.workspace = true
