[package]
name = "anodizer-stage-templatefiles"
description = "Template file rendering stage for the anodizer release tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
